--- a/estilosValeria.css
+++ b/estilosValeria.css
@@ -2,10 +2,25 @@ h1 {
    text-shadow: 8px 8px 5px #ffffff;
 }
 
+
 h3, h4{
    text-shadow: 4px 3px #ffffff;
 }
+
+
 footer b{
 	
-	style="font-family:Lucida Handwriting"
+    style="font-family:Lucida Handwriting"
+}
+
+
+div.polaroid {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
+  								
+}
+
+
+img:hover {
+   box-shadow: 0 5px 10px 20px rgb(247, 147, 84);		
 }
